@@ -52,7 +52,7 @@ test :: all check run_tests
 
 test_clean : cmodules_clean
 	-MAKE=$(MAKE) @PERL@ t/TEST -clean
-	-rm -rf t/htdocs t/logs t/modules t/TEST t/cgi-bin/test_cgi t/cgi-bin/.libs t/conf/extra.conf
+	-rm -rf t/htdocs t/logs t/modules t/TEST t/core t/core.* t/cgi-bin/test_cgi t/cgi-bin/.libs t/conf/extra.conf t/conf/ssl/ca t/conf/ssl/httpd-passphrase.pl
 
 cmodules_clean:
 	-cd c-modules && $(MAKE) clean
